crates/uitest/fixtures/parser/impl_trait.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/impl_trait.fe
---
error[1-0001]: unexpected syntax
  ┌─ impl_trait.fe:1:12
  │
1 │ impl X<T, u))> for Y<T where T: X {}
  │            ^^ unexpected syntax

error[1-0001]: expected closing `>`
  ┌─ impl_trait.fe:1:23
  │
1 │ impl X<T, u))> for Y<T where T: X {}
  │                       ^ expected closing `>`

error[1-0001]: expected newline after type bounds
  ┌─ impl_trait.fe:1:34
  │
1 │ impl X<T, u))> for Y<T where T: X {}
  │                                  ^ expected newline after type bounds

error[1-0001]: expected closing `>`
  ┌─ impl_trait.fe:3:12
  │
3 │ impl X<T, u for Y<T where T: X {}
  │            ^ expected closing `>`

error[1-0001]: expected closing `>`
  ┌─ impl_trait.fe:3:20
  │
3 │ impl X<T, u for Y<T where T: X {}
  │                    ^ expected closing `>`

error[1-0001]: expected newline after type bounds
  ┌─ impl_trait.fe:3:31
  │
3 │ impl X<T, u for Y<T where T: X {}
  │                               ^ expected newline after type bounds

error[1-0001]: unexpected syntax
  ┌─ impl_trait.fe:5:8
  │
5 │ impl X @ for Y {}
  │        ^ unexpected syntax


